<resources>
    <string name="app_name">MyGank</string>
    <string name="title_home">主页</string>
    <string name="title_more">更多</string>
    <string name="title_me">我</string>
    <string name="favorite_tv">我的收藏</string>
    <string name="theme_tv">夜间模式</string>
    <string name="setting_tv">设置</string>
    <string name="login_register">登录/注册</string>
    <string name="name_test">mask浩</string>
    <string name="inputAccount">请输入邮箱</string>
    <string name="inputPassword">请输入密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="inputName">请输入昵称</string>
    <string name="get_verifyCode">获取验证码</string>
    <string name="inputVerifyCode">请输入验证码</string>
    <string name="wifi_img_only">省流量模式</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于</string>
    <string name="wifi_img_only_small">仅在Wi-Fi环境下才会自动加载图片</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_copy">复制链接</string>
    <string name="menu_share">分享</string>
    <string name="logout">退出登录</string>
    <string name="do_logout">确认退出？</string>
    <string name="do_delete">确认删除？</string>
    <string name="sure">确认</string>
    <string name="do_clearCache">清除缓存后，下一次加载将消耗较多流量</string>
    <string name="clearCacheSuccess">清除缓存成功</string>
    <string name="clearCacheError">清除缓存失败</string>
    <string name="cacheInitSize">包括图片，网页等缓存，共 (0M)</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="delete_all">删除所有搜索记录</string>
    <string name="nextTime">下次再说</string>
    <string name="download">下载</string>
    <string name="goSetting">去设置</string>
    <string name="load_failed_me">加载失败，请点我重试</string>
    <string name="delete">删除</string>
    <string name="homePage_setting_tv">首页加载每日数据</string>
    <string name="title_recommend">推荐</string>
    <string name="title_everyday">每日</string>
    <string name="add_tag_tips">请选择您感兴趣的标签，至少3个！</string>
    <string name="tags_add">开始加载</string>
    <string name="atLeastTagTips">至少选择3个标签</string>
    <string name="syncData">本地数据同步</string>
    <string name="from_photo">来源：福利</string>
    <string name="who_photo">作者：Gank</string>
    <string name="click_load_more">点击为您推荐更多</string>
    <string name="photo_trasition">转场动画</string>
</resources>
