<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:checked="true"
        android:id="@+id/navigation_everyday"
        android:icon="@drawable/ic_today_black_24dp"
        android:title="@string/title_everyday" />


    <item
        android:checked="false"
        android:id="@+id/navigation_recommend"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/title_recommend" />



    <item
        android:checked="false"
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_more" />

    <item
        android:checked="false"
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_me" />
</menu>
