<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        app:cardBackgroundColor="@color/colorCardViewBackground"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/me_fav_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/image_paddingSize"
                    android:src="@drawable/ic_favorite_black_24dp_me" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/favorite_tv"
                            android:textColor="@color/colorTextViewBlack"
                            android:textSize="@dimen/me_textSize" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/view_size"
                            android:layout_alignParentBottom="true"
                            android:background="@color/colorViewGroupBackground" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/me_nightTh_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/image_paddingSize"
                    android:src="@drawable/ic_brightness_2_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/theme_tv"
                            android:textColor="@color/colorTextViewBlack"
                            android:textSize="@dimen/me_textSize" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/view_size"
                            android:layout_alignParentBottom="true"
                            android:background="@color/colorViewGroupBackground" />

                        <Switch
                            android:clickable="false"
                            android:id="@+id/me_nightTh_sw"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/image_paddingSize"
                            />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/me_setting_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/image_paddingSize"
                    android:src="@drawable/ic_settings_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/setting_tv"
                            android:textColor="@color/colorTextViewBlack"
                            android:textSize="@dimen/me_textSize" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>